--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,15 +14,22 @@
   },
   "dependencies": {
     "@guardianest/shared": "*",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.8",
     "@supabase/supabase-js": "^2.47.10",
     "expo": "~54.0.10",
+    "expo-linear-gradient": "^15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "^18.2.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
     "@types/jest": "^29.5.14",
+    "@types/react": "~19.1.0",
     "eslint": "^8.57.1",
     "jest": "^29.7.0",
     "typescript": "~5.9.2"
