--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -3,35 +3,26 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
+    "start": "expo start",
     "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "expo export",
-    "type-check": "tsc --noEmit",
-    "lint": "eslint . --ext .ts,.tsx",
-    "test": "jest"
+    "build": "expo export"
   },
   "dependencies": {
-    "@guardianest/shared": "*",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/stack": "^7.4.8",
-    "@supabase/supabase-js": "^2.47.10",
-    "expo": "~54.0.10",
-    "expo-linear-gradient": "^15.0.7",
+    "expo": "~54.0.11",
+    "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
-    "react": "^18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-gesture-handler": "^2.28.0",
-    "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.16.0"
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@types/react": "~19.1.0",
-    "eslint": "^8.57.1",
-    "jest": "^29.7.0",
+    "@types/react": "~19.1.10",
+    "@types/react-dom": "~19.1.7",
     "typescript": "~5.9.2"
   },
   "private": true
